Fixed layout issues on desktop/mobile versions

--- a/assets/sass/_core.scss
+++ b/assets/sass/_core.scss
@@ -3695,31 +3695,6 @@ html[xmlns] .slides {
         padding-bottom: 0px;
         visibility: hidden;
     }
-    // #mobile-navigation {
-    //     float: left;
-    //     width: 93%;
-    //     height: auto;
-    //     background-color: #ffffff;
-    //     padding-left: 7%;
-    //     padding-bottom: 10px;
-    //     visibility: visible;
-    //     border-bottom: 2px solid $secondary;
-    //     border-top: 1px solid #E1E1E1;
-    //     padding-top: 5px;
-    //     font-size: 18px;
-    // }
-    // #mobile-navigation a:link {
-    //     color: #2C1819;
-    //     text-decoration: none;
-    // }
-    // #mobile-navigation a:visited {
-    //     color: #2C1819;
-    //     text-decoration: none;
-    // }
-    // #mobile-navigation a:hover {
-    //     color: #4A97AE;
-    //     text-decoration: none;
-    // }
     #uniquename li {
         padding-bottom: 0px;
     }
@@ -5374,5 +5349,19 @@ h2.faqTitle {
 			text-align: center;
 			width: 100%;
 		}
+	}
+}
+@media screen and (max-width: 600px) {
+	#main-header-wrapper {
+		height: 140px;
+		#logo {
+			margin-bottom: 6px;
+			a {
+				width: 200px;
+			}
+		}
+	}
+	.linkboxlgfont {
+	    font-size: 18px;
 	}
 }
